# Arcana

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.test  PLAN.md  README.md  arcana.toml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
arcana/: package-lock.json  package.json  scratch
arcana/arcana/: appex.js  staticproto.js  urlRanking.js
arcana/arcanaScripts/: appex.js  condenser.js  dynamicproto.js  loadTotalScrape.js  staticproto.js  totalScrape.js  urlRanking.js
arcana/constants/: 2_29_2018_const.json  2_30_2018_const.json  3_11_2018_const.json  3_24_2018_const.json
arcana/dynamic/: 10_5_2019_dynamic.json  10_5_2019_dynamic_total.json  3_16_2018_dynamic.json  3_17_2018_dynamic.json  3_19_2018_dynamic.json  3_20_2018_dynamic.json  7_27_2019_dynamic copy.json
arcana/mongoScripts/: companyRetrieval.js  create_collections.js  insert_constants.js  insert_dynamics.js
arcana/pythonScripts/: condense.py
arcana/rankdata/: 10_1_2019_rankings.json  10_4_2019_rankings.json  2_14_2018_rankings.json  2_15_2018_rankings.json  3_15_2018_rankings.json  3_16_2018_rankings.json  (+5 more)
docs/: info-bar-stability.md
puppeteer_POC/: .gitignore  appex.js  asyncStaticScrape_proto.js  create_collections.js  dynamicproto.js  package-lock.json  package.json  staticproto.1.js  staticproto.js  urlRanking.js
scripts/: clear_trades.py  explore_coinbase.py  integration_test.sh  integration_test_local.py  overnight_ingest.py  query_trades.py  test_api_limit.py
tests/: test_cli.py  test_config.py  test_pipeline.py  test_swarm.py
(+104 files in other folders)
